[package]
name = "questlog"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
dirs = "5"
iana-time-zone = "0.1"
anyhow = "1"
toml_edit = "0.22"
tui-input = { version = "0.15.3", features = ["crossterm"] }
